tests/test_assets/semantic/invalid/declarations/checked_constant_arithmetic.cog
ADD_OVERFLOW :: 2147483647 + 1;
SUBTRACT_OVERFLOW :: cast(i32, -2147483648) - 1;
MULTIPLY_OVERFLOW :: 1073741824 * 2;
DIVIDE_ZERO :: 1 / 0;
REMAINDER_ZERO :: 1 % 0;
DIVIDE_MINIMUM :: cast(i32, -2147483648) / -1;
REMAINDER_MINIMUM :: cast(i32, -2147483648) % -1;
U64_OVERFLOW :: 18446744073709551615 + 1;
I64_MULTIPLY_OVERFLOW :: cast(i64, 4611686018427387904) * 2;
ADD_OPERAND_RANGE :: cast(u8, 255) + 256;
DIVIDE_OPERAND_RANGE :: cast(i8, 1) / 128;
REMAINDER_OPERAND_RANGE :: cast(i8, 1) % 128;
NESTED_OVERFLOW: i32 : (50000 * 50000) + 1;
