tests/test_assets/semantic/invalid/declarations/checked_constant_arithmetic.expected
semantic error at line 1: integer overflow in constant expression
semantic error at line 2: integer overflow in constant expression
semantic error at line 3: integer overflow in constant expression
semantic error at line 4: division by zero in constant expression
semantic error at line 5: remainder by zero in constant expression
semantic error at line 6: integer overflow in constant expression
semantic error at line 7: integer overflow in constant expression
semantic error at line 8: integer overflow in constant expression
semantic error at line 9: integer overflow in constant expression
semantic error at line 10: integer constant operand does not fit operation type
semantic error at line 11: integer constant operand does not fit operation type
semantic error at line 12: integer constant operand does not fit operation type
semantic error at line 13: integer overflow in constant expression
13 semantic errors generated.
